Terminal for this project
Last login: Mon Jun 19 13:21:44 on ttys000
jayceeannerodriguez@jaycees-MacBook-Pro ~ % pwd
/Users/jayceeannerodriguez
jayceeannerodriguez@jaycees-MacBook-Pro ~ % mkdir variablePractice
jayceeannerodriguez@jaycees-MacBook-Pro ~ % ls
Desktop			Mod_0			Public			home			vs_code_practice
Documents		Movies			git-cfu			pratice
Downloads		Music			github_cfu		random
Library			Pictures		github_practice		variablePractice
jayceeannerodriguez@jaycees-MacBook-Pro ~ % cd variablePractice 
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % touch variables.js
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git init
Initialized empty Git repository in /Users/jayceeannerodriguez/variablePractice/.git/
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git commit -m "Initial commit"
On branch main

Initial commit

Untracked files:
  (use "git add <file>..." to include in what will be committed)
	variables.js

nothing added to commit but untracked files present (use "git add" to track)
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % code .
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git add variablePractice.js
fatal: pathspec 'variablePractice.js' did not match any files
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git add variables.js
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git status
On branch main

No commits yet

Changes to be committed:
  (use "git rm --cached <file>..." to unstage)
	new file:   variables.js

jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git commit -m "greeting"
[main (root-commit) bffeee0] greeting
 1 file changed, 0 insertions(+), 0 deletions(-)
 create mode 100644 variables.js
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git status
On branch main
nothing to commit, working tree clean
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git add variables.js
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git commit -m "Add info about me"
[main c37f4c4] Add info about me
 1 file changed, 6 insertions(+)
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git status
On branch main
nothing to commit, working tree clean
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git add variables.js 
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git commit -m "Add more info about me"
[main 840c688] Add more info about me
 1 file changed, 5 insertions(+), 1 deletion(-)
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % git status
On branch main
nothing to commit, working tree clean
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % node variables.js 
/Users/jayceeannerodriguez/variablePractice/variables.js:3
``javascript``
  ^^^^^^^^^^

SyntaxError: Unexpected identifier
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:77:12)
    at node:internal/main/run_main_module:17:47
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % console(doesJayceeLoveSoda)
zsh: number expected
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % echo "# variablePractice" >> README.md
git init
git add README.md
git commit -m "first commit"
git branch -M main
git remote add origin git@github.com:jayceeannne/variablePractice.git
git push -u origin main
Reinitialized existing Git repository in /Users/jayceeannerodriguez/variablePractice/.git/
[main 513c7f6] first commit
 1 file changed, 1 insertion(+)
 create mode 100644 README.md
Enumerating objects: 12, done.
Counting objects: 100% (12/12), done.
Delta compression using up to 10 threads
Compressing objects: 100% (7/7), done.
Writing objects: 100% (12/12), 1.03 KiB | 1.03 MiB/s, done.
Total 12 (delta 1), reused 0 (delta 0), pack-reused 0
remote: Resolving deltas: 100% (1/1), done.
To github.com:jayceeannne/variablePractice.git
 * [new branch]      main -> main
branch 'main' set up to track 'origin/main'.
jayceeannerodriguez@jaycees-MacBook-Pro variablePractice % 
